// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid Test renders basically 1`] = `
<Row
  gutter={10}
>
  <div
    className="xl-row"
    style={
      Object {
        "marginLeft": -5,
        "marginRight": -5,
      }
    }
  >
    <Col
      offset={1}
      pull={3}
      push={2}
      span={5}
    >
      <div
        className="xl-col xl-col-span-5 xl-col-offset-1 xl-col-push-2 xl-col-pull-3"
        style={
          Object {
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
      >
        renders row
      </div>
    </Col>
    <Col
      offset={1}
      pull={3}
      push={2}
      span={5}
    >
      <div
        className="xl-col xl-col-span-5 xl-col-offset-1 xl-col-push-2 xl-col-pull-3"
        style={
          Object {
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
      >
        renders row
      </div>
    </Col>
  </div>
</Row>
`;

exports[`Grid Test renders basically: flex 1`] = `
<Row
  align="top"
  gutter={10}
  justify="center"
  type="flex"
>
  <div
    className="xl-row-flex xl-row-flex-center xl-row-flex-top"
    style={
      Object {
        "marginLeft": -5,
        "marginRight": -5,
      }
    }
  >
    <Col
      offset={1}
      order={2}
      pull={3}
      push={2}
      span={5}
    >
      <div
        className="xl-col xl-col-span-5 xl-col-order-2 xl-col-offset-1 xl-col-push-2 xl-col-pull-3"
        style={
          Object {
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
      >
        renders row
      </div>
    </Col>
    <Col
      offset={1}
      order={1}
      pull={3}
      push={2}
      span={5}
    >
      <div
        className="xl-col xl-col-span-5 xl-col-order-1 xl-col-offset-1 xl-col-push-2 xl-col-pull-3"
        style={
          Object {
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
      >
        renders row
      </div>
    </Col>
  </div>
</Row>
`;

exports[`Grid Test renders responsibily 1`] = `
<Row
  gutter={10}
>
  <div
    className="xl-row"
    style={
      Object {
        "marginLeft": -5,
        "marginRight": -5,
      }
    }
  >
    <Col
      md={
        Object {
          "offset": 4,
          "pull": 2,
          "push": 1,
          "span": 4,
        }
      }
      xs={
        Object {
          "offset": 2,
          "pull": 3,
          "push": 4,
          "span": 10,
        }
      }
    >
      <div
        className="xl-col xl-col-md-span-4 xl-col-md-offset-4 xl-col-md-pull-2 xl-col-md-push-1 xl-col-xs-span-10 xl-col-xs-offset-2 xl-col-xs-pull-3 xl-col-xs-push-4"
        style={
          Object {
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
      >
        renders row
      </div>
    </Col>
    <Col
      md={
        Object {
          "offset": 5,
          "pull": 3,
          "push": 2,
          "span": 7,
        }
      }
      xs={
        Object {
          "offset": 1,
          "pull": 2,
          "push": 3,
          "span": 5,
        }
      }
    >
      <div
        className="xl-col xl-col-md-span-7 xl-col-md-offset-5 xl-col-md-pull-3 xl-col-md-push-2 xl-col-xs-span-5 xl-col-xs-offset-1 xl-col-xs-pull-2 xl-col-xs-push-3"
        style={
          Object {
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
      >
        renders row
      </div>
    </Col>
  </div>
</Row>
`;

exports[`Grid Test renders responsibily: flex 1`] = `
<Row
  gutter={10}
  type="flex"
>
  <div
    className="xl-row-flex"
    style={
      Object {
        "marginLeft": -5,
        "marginRight": -5,
      }
    }
  >
    <Col
      md={
        Object {
          "offset": 4,
          "order": 2,
          "pull": 2,
          "push": 1,
          "span": 4,
        }
      }
      xs={
        Object {
          "offset": 2,
          "order": 1,
          "pull": 3,
          "push": 4,
          "span": 10,
        }
      }
    >
      <div
        className="xl-col xl-col-md-span-4 xl-col-md-offset-4 xl-col-md-pull-2 xl-col-md-push-1 xl-col-md-order-2 xl-col-xs-span-10 xl-col-xs-offset-2 xl-col-xs-pull-3 xl-col-xs-push-4 xl-col-xs-order-1"
        style={
          Object {
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
      >
        renders row
      </div>
    </Col>
    <Col
      md={
        Object {
          "offset": 5,
          "order": 1,
          "pull": 3,
          "push": 2,
          "span": 7,
        }
      }
      xs={
        Object {
          "offset": 1,
          "order": 2,
          "pull": 2,
          "push": 3,
          "span": 5,
        }
      }
    >
      <div
        className="xl-col xl-col-md-span-7 xl-col-md-offset-5 xl-col-md-pull-3 xl-col-md-push-2 xl-col-md-order-1 xl-col-xs-span-5 xl-col-xs-offset-1 xl-col-xs-pull-2 xl-col-xs-push-3 xl-col-xs-order-2"
        style={
          Object {
            "paddingLeft": 5,
            "paddingRight": 5,
          }
        }
      >
        renders row
      </div>
    </Col>
  </div>
</Row>
`;

exports[`Grid Test renders responsibily: gutter 1`] = `
<Row
  gutter={
    Object {
      "lg": 4,
      "md": 3,
      "sm": 2,
      "xl": 5,
      "xs": 1,
      "xxl": 6,
    }
  }
>
  <div
    className="xl-row"
  >
    <Col
      offset={1}
      order={2}
      pull={3}
      push={2}
      span={5}
    >
      <div
        className="xl-col xl-col-span-5 xl-col-order-2 xl-col-offset-1 xl-col-push-2 xl-col-pull-3"
      >
        renders row
      </div>
    </Col>
    <Col
      offset={1}
      order={1}
      pull={3}
      push={2}
      span={5}
    >
      <div
        className="xl-col xl-col-span-5 xl-col-order-1 xl-col-offset-1 xl-col-push-2 xl-col-pull-3"
      >
        renders row
      </div>
    </Col>
  </div>
</Row>
`;
